# selenium-python-test

./: .gitignore  LICENSE  pyproject.toml
src/scraper/: cli.py  config.py  logging_conf.py
src/scraper/drivers/: chrome.py
src/scraper/extractors/: links.py  text.py
src/scraper/pages/: alza_category.py  alza_home.py  alza_product.py  base.py
src/scraper/pipeline/: crawl.py
src/scraper/storage/: csv.py  jsonl.py  output.py
src/scraper/utils/: rate_limit.py
tests/: test_links.py
